2005-12-14  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/fact.cpp :

	  - Fixed incorrect checking of verify_memb() and verify_subst() which
	    used to allow non-ground facts like memb(SS, S) or subst(A, AG).

2005-12-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/updatetab.cpp :
	* lib/updatetab.h :

	  - Fixed get() problem so that it won't barf when given null ptrs.

	  - Fixed get() function so that it will give out null pointers
	    instead of an empty list, similar to the behaviour of the other
	    get() function.

	  - Added a variant of the get() function that gives out 2 variable
	    lists.

	* lib/list.cpp :

	  - In the del() function, if deleting a list of items, ignore those
	    that are not in the list.

2005-12-13  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagging vlad-1_3_0

	* lib/polbase.cpp :

	  - add_consttab() now accepts non-ground expressions.

	* lib/consttab.cpp :
	* lib/consttab.h :

	  - Removed replace() and varlist() from consttab. Expressions stored
	    in this table should already be grounded.

	* lib/expression.cpp :
	* lib/expression.h :
	* lib/fact.cpp :
	* lib/fact.h :

	  - Added a vvarlist() function that will verify a fact/expression and
	    at the same time will add any variables encountered into a list.

	  - Original varlist() does not need a varlist **. Now uses varlist *.

	  - verify() functions will now ignore the varlist if it is null.

	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/varlist.cpp :
	* lib/varlist.h :

	  - Added new add() and del() functions that take lists instead of
	    variables and strings.

	  - redefined copy() by using the new vlad_list::add() function.

	* lib/list.h :
	* lib/list.cpp :

	  - Added add() and del() functions in vlad_list. These functions take
	    vlad_list parameters.

	  - Added a default copy() function in vlad_list_item that is used by
	    the above add() function to duplicate the item. This copy()